# jj-spr

./: CHANGELOG.md  flake.nix
spr/: Cargo.toml
spr/src/: git.rs  github.rs  jj.rs  main.rs  utils.rs
spr/src/commands/: amend.rs  close.rs  diff.rs  init.rs  land.rs  mod.rs  squash.rs
