[package]
name = "jj-spr"
version = "0.1.0"
authors = ["Lucio Franco"]
description = "Super Pull Requests: Power tool for Jujutsu + GitHub workflows with amend-friendly single PRs and effortless stacked PRs"
repository = "https://github.com/LucioFranco/jj-spr"
homepage = "https://github.com/LucioFranco/jj-spr"
license = "MIT"
edition = "2024"
exclude = [".github", ".gitignore"]

[[bin]]
name = "jj-spr"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.5.48", features = ["derive", "wrap_help"] }
console = "^0.16.1"
debug-ignore = "1.0.5"
dialoguer = "^0.12.0"
futures = "^0.3.21"
futures-lite = "^2.6.1"
git2 = { version = "^0.20.2", default-features = false }
git2-ext = "0.6.0"
graphql_client = "^0.14.0"
indoc = "^2.0.6"
lazy-regex = "^3.4.1"
octocrab = { version = "^0.51.0", default-features = false, features = ["jwt-rust-crypto", "rustls", "rustls-ring", "default-client"] }
reqwest = { version = "^0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = "^1.0.136"
tabled = { version = "0.20", features = ["ansi"] }
textwrap = "0.16.2"
thiserror = "^2.0.17"
tokio = { version = "^1.19.2", features = ["macros", "process", "rt-multi-thread", "time"] }
unicode-normalization = "^0.1.19"

[dev-dependencies]
tempfile = "3.0"
